--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #040714;
 }
 
 code {
